--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,6 +11,7 @@
     "lint": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@neodify/db": "0.1.0",
     "@anthropic-ai/claude-agent-sdk": "^0.2.37",
     "@fastify/cors": "^11.1.0",
     "@fastify/websocket": "^11.2.0",
