--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -13,4 +13,3 @@
   },
   "include": ["src", "test"]
 }
-
