--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -12,16 +12,17 @@
     "lint": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
-    "@neodify/db": "0.1.0",
     "@anthropic-ai/claude-agent-sdk": "^0.2.37",
     "@fastify/cors": "^11.1.0",
     "@fastify/websocket": "^11.2.0",
+    "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "node-cron": "^4.2.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
