chore(env): split web/server env by development and production

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,18 @@ dist/
 .env.*
 !.env.example
 !**/.env.example
+!**/.env.*.example
 *.db
 *.db-*
 coverage/
 npm-debug.log*
 .runtime/
 skills/
+env/**/.env
+env/**/.env.*
+!env/**/*.env.example
+!env/**/.env.example
+!env/**/.env.*.example
 data/
 .vscode/
 *.sqlite
