--- a/env/server/.env.development.example
+++ b/env/server/.env.development.example
@@ -1,14 +1,14 @@
-# Anthropic API Key（必填）
+# ===== Server Development Env =====
+
 ANTHROPIC_API_KEY=your_anthropic_api_key
 ANTHROPIC_BASE_URL=https://api.anthropic.com/v1
-# SQLite 数据库文件路径（相对 apps/server 目录）
-DATABASE_URL=../../data/neodify.sqlite
+ANTHROPIC_MODEL=claude-sonnet-4-5
 
-# 服务监听配置
+DATABASE_URL=../../data/neodify-dev.sqlite
+
 HOST=0.0.0.0
 PORT=3000
 
-# 单用户登录认证（必填）
 AUTH_USERNAME=admin
 AUTH_PASSWORD=change_me
 AUTH_TOKEN_SECRET=change_me_to_a_long_random_secret
