refactor: 运行入口改为服务调用API语义

--- a/env/server/.env.development.example
+++ b/env/server/.env.development.example
@@ -13,3 +13,5 @@ AUTH_USERNAME=admin
 AUTH_PASSWORD=change_me
 AUTH_TOKEN_SECRET=change_me_to_a_long_random_secret
 AUTH_TOKEN_TTL_SEC=86400
+
+RUN_INVOKE_API_KEY=change_me_service_api_key
