--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,6 +18,7 @@
     "better-sqlite3": "^12.4.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
+    "pino-pretty": "^13.1.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
