--- a/env/server/.env.production.example
+++ b/env/server/.env.production.example
@@ -15,3 +15,4 @@ AUTH_TOKEN_SECRET=change_me_to_a_long_random_secret
 AUTH_TOKEN_TTL_SEC=86400
 
 RUN_INVOKE_API_KEY=change_me_service_api_key
+SKILL_AUTO_SYNC_INTERVAL_MS=3000
